log
Thu 28 Mar 2024 02:08:55 PM UTC: 
 tests:  0|6
total_score: 0/70
576c7b3
Thu 28 Mar 2024 02:13:07 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
8f5ebd2
Thu 28 Mar 2024 02:13:36 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b6f3287
Thu 28 Mar 2024 02:15:27 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|5
total_score: 15/70
c31082c
Thu 28 Mar 2024 02:17:05 PM UTC: 
 list.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7a9167d
